# code-server-enhance

./: .gitignore  Cargo.toml  LICENSE  readme.md
patches/: code-server.patch  vscode.patch
patchs/: code-server.patch  vscode.patch
src/: funs.rs  lib.rs  utils.rs
src/funs/: clipboard.rs  disable_dev_tools.rs  task.rs  watermark.rs  webscoket.rs
src/utils/: crypt.rs
tests/: test.html
